workouts are saved in memory and ready to be pushed with an api

--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -1,5 +1,4 @@
 <ion-grid>
-
   <ion-row>
     <ion-col>
       <ion-item>
@@ -8,7 +7,7 @@
     </ion-col>
     <ion-col>
       <ion-item>
-        <ion-icon size="small" name="calendar-outline"></ion-icon>
+        <ion-icon size="small" name="repeat-outline"></ion-icon>
         <ion-input 
           [clearOnEdit]="true" 
           type="number"
@@ -42,9 +41,5 @@
         </ion-input>
       </ion-item>
     </ion-col>
-
-
-
-
   </ion-row>
 </ion-grid>
