--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -7,7 +7,7 @@
   </ion-datetime> -->
   <ion-list>
     <ion-item-divider sticky>
-      <ion-item >
+      <ion-item>
         December 12 - December 19
       </ion-item>
       
@@ -26,7 +26,8 @@
       </ion-card-header>
     
       <ion-card-content>
-       3 hours
+      {{session.duration}} mins
+      {{session.muscleGroups}}
       </ion-card-content>
     </ion-card>
 
