Cleaned up home page toolbar

--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,13 +1,11 @@
-<ion-header>
-  <ion-toolbar>
+<ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Emoticoach</ion-title>
   </ion-toolbar>
-</ion-header>
-<ion-header>
-  <ion-toolbar>
+
+  <ion-toolbar color="#000000">
     <ion-buttons slot="start">
       <ion-button expand="block">
         <ion-icon name="chevron-back-outline"></ion-icon>
@@ -20,7 +18,6 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header>
 
 <ion-content>
   <ion-row class="banners">
