--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -29,3 +29,7 @@
 @import 'swiper/scss';
 @import 'swiper/scss/keyboard';
 @import 'swiper/scss/pagination';
+
+ion-toolbar {
+    --background: #833535;
+  }
