--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,8 +1,15 @@
 <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+  <ion-buttons slot="start" color="#fff" routerLink="/login">
+    <ion-button expand="block">
+      <ion-icon name="person-circle-outline"></ion-icon>
+    </ion-button>
+  </ion-buttons>
     <ion-title>Emoticoach</ion-title>
+    <ion-buttons slot="end">
+      <ion-button expand="block">
+        <ion-icon name="settings-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 
   <ion-toolbar color="#000000">
@@ -13,7 +20,7 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button expand="block">
+      <ion-button expand="block" routerLink="/log-workout">
         <ion-icon name="add-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
