--- a/Frontend/Emoticoach/src/app/pages/home/home.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.scss
@@ -1,3 +1,7 @@
+ion-icon{
+    color: #fff;
+}
+
 ion-content{
     --background : #000000;
     ion-col{
@@ -25,8 +29,8 @@ ion-content{
     }
     ion-row.banners {
         position: relative;
-        padding: 10px;
-        height: 180px;
+        padding: 20px;
+        height: 200px;
         background: #833535;
         border-radius: 2.5rem;
         margin: 6vh 1rem 0 1rem;
