Imported echarts module

--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -1,9 +1,2 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>graph-onerm</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div echarts [options]="chartOption" class="demo-chart"></div>
 
-<ion-content>
-
-</ion-content>
