--- a/Frontend/Emoticoach/src/app/pages/login/login.page.html
+++ b/Frontend/Emoticoach/src/app/pages/login/login.page.html
@@ -17,7 +17,7 @@
           <ion-icon name="lock-closed"></ion-icon>
           <ion-input type="password" placeholder="Password"></ion-input>
         </ion-item>
-        <ion-button expand="block" routerLink="/home">Log in</ion-button>
+        <ion-button expand="block" routerLink="/tabs/home">Log in</ion-button>
       </ion-card-content>
     </ion-card>
 
