--- a/Frontend/Emoticoach/src/app/pages/sign-up/sign-up.page.html
+++ b/Frontend/Emoticoach/src/app/pages/sign-up/sign-up.page.html
@@ -10,31 +10,31 @@
       <ion-card-content>
         <ion-item>
           <ion-icon name="text-outline"></ion-icon>
-          <ion-input type="text" placeholder="First Name"></ion-input>
+          <ion-input type="text" placeholder="First Name" [(ngModel)]="userData.firstName"></ion-input>
         </ion-item>
         <ion-item>
           <ion-icon name="text-outline"></ion-icon>
-          <ion-input type="text" placeholder="Last Name"></ion-input>
+          <ion-input type="text" placeholder="Last Name" [(ngModel)]="userData.lastName"></ion-input>
         </ion-item>
         <ion-item>
           <ion-icon name="mail"></ion-icon>
-          <ion-input type="text" placeholder="Email"></ion-input>
+          <ion-input type="text" placeholder="Email" [(ngModel)]="userData.email"></ion-input>
         </ion-item>
         <ion-item>
           <ion-icon name="person-outline"></ion-icon>
-          <ion-input type="text" placeholder="Username"></ion-input>
+          <ion-input type="text" placeholder="Username" [(ngModel)]="userData.username"></ion-input>
         </ion-item>
         <ion-item>
           <ion-icon name="lock-closed"></ion-icon>
-          <ion-input type="password" placeholder="Password"></ion-input>
+          <ion-input type="password" placeholder="Password" [(ngModel)]="userData.password"></ion-input>
         </ion-item>
-        <ion-button expand="block" routerLink="/login">Sign Up</ion-button>
+        <ion-button expand="block" routerLink="/login" (click)="toRegister()">Sign Up</ion-button>
       </ion-card-content>
     </ion-card>
 
     <div class="line-text">
       <span class="text">
-        Already have an account? <a routerLink="/login">Log in</a>
+        Already have an account? <a routerLink="/login" (click)="toLogin()">Log in</a>
       </span>
   </div>
   </div>
