--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -1,6 +1,5 @@
 <ion-content class="ion-padding" >
   <!-- <ion-datetime 
- 
     presentation="date" 
     [multiple]="true" 
     [value]="['2022-12-03']">
@@ -15,11 +14,16 @@
     <ion-card  
       *ngFor="let session of sessions; index as i;"
       button="true"
-      (click)="goToSession(i)"
+      (click)="loadSession(i)"
       routerDirection="forward"
       routerLink="/log-workout" 
       routerLinkActive="active" 
     >
+    <!-- <ion-card  
+      *ngFor="let session of sessions; index as i;"
+      button="true"
+      (click)="loadSession(i)"
+    > -->
       <ion-card-header>
         <ion-card-title>{{session.name}}</ion-card-title>
         <ion-card-subtitle>{{session.datetime}}</ion-card-subtitle>
@@ -31,7 +35,6 @@
       </ion-card-content>
     </ion-card>
 
-  
     <ion-row>
       <ion-col></ion-col>
       <ion-col size="auto">
