--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -35,7 +35,7 @@
     </ion-modal>
  
   <app-exercise 
-    *ngFor="let activity of activities; let i = index" 
+    *ngFor="let activity of currentSession.activities; let i = index" 
     [activity]="activity" 
     [activityIndex]="i">
   </app-exercise>
