--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Workout</ion-title>
     <ion-buttons slot="end">
