74 feature http request for all sessions (#90)
* created an observable that can be subscribed to for session data

Signed-off-by: csherf <chadnsherf@gmail.com>

* creating a new workout

Signed-off-by: csherf <chadnsherf@gmail.com>

* Bump django from 4.1.6 to 4.1.7 in /backend (#40)

Bumps [django](https://github.com/django/django) from 4.1.6 to 4.1.7.
- [Release notes](https://github.com/django/django/releases)
- [Commits](https://github.com/django/django/compare/4.1.6...4.1.7)

---
updated-dependencies:
- dependency-name: django
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Kobe Maristela <kobe@maristela.net>

* Fixed naming convention on workout sessionData. (#78)

* Changed activity to activies naming on workout sessionData. (#80)

* GetAllSessions now filters by user and returns muscleGroup. (#82)

* Feature: User Tests for User Model (#85)

* Added base user unit test cases

* Added User Registration Unit Test

* Added Login and Logout Unit Tests

* Added commit new line

* Removed unused imports and fixed lint issues

* Changed the service to work with observables. fixed creating a new workout

Signed-off-by: csherf <chadnsherf@gmail.com>

* removed token

Signed-off-by: csherf <chadnsherf@gmail.com>

* removed token

Signed-off-by: csherf <chadnsherf@gmail.com>

---------

Signed-off-by: csherf <chadnsherf@gmail.com>
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Kobe Maristela <kobe@maristela.net>
Co-authored-by: Jaemin Lee <35903513+jaemindev@users.noreply.github.com>

--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Workout</ion-title>
     <ion-buttons slot="end">
@@ -35,7 +35,7 @@
     </ion-modal>
  
   <app-exercise 
-    *ngFor="let activity of activities; let i = index" 
+    *ngFor="let activity of currentSession.activities; let i = index" 
     [activity]="activity" 
     [activityIndex]="i">
   </app-exercise>
