Login unit testing, not complete yet

--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -1,4 +1,10 @@
-<div class="chart-container">
-    <canvas  id="MyChart" >{{ chart }}</canvas>
-</div>
+<ion-content>
+    <ion-toolbar>
+      <ion-title>One Rep Max</ion-title>
+    </ion-toolbar>
+    <div class="chart-container">
+        <canvas  id="MyChart" >{{ chart }}</canvas>
+    </div>
+</ion-content>
+
 
