--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -13,32 +13,26 @@
     </ion-item-divider>
     <ion-card  
       *ngFor="let session of sessions; index as i;"
-      button="true"
-      (click)="loadSession(i)"
-      routerDirection="forward"
-      routerLink="/log-workout" 
-      routerLinkActive="active" 
     >
-    <!-- <ion-card  
-      *ngFor="let session of sessions; index as i;"
-      button="true"
-      (click)="loadSession(i)"
-    > -->
       <ion-card-header>
-        <ion-card-title>{{session.name}}</ion-card-title>
+        <ion-card-title>{{session.name}} </ion-card-title>
         <ion-card-subtitle>{{session.datetime}}</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
-      {{session.duration}} mins
-      {{session.muscleGroups}}
+        <ion-row>
+          {{session.duration}} mins
+          {{session.muscleGroups}}
+        </ion-row>
       </ion-card-content>
+      <ion-button fill="clear" (click)="loadSession(i)">Edit</ion-button>
+    <ion-button fill="clear" (click)="deleteSession(session.id)">Delete</ion-button>
     </ion-card>
 
     <ion-row>
       <ion-col></ion-col>
       <ion-col size="auto">
-        <ion-button (click)="createNewSession()"routerLink="/log-workout" routerLinkActive="active" routerDirection="forward">Log A Workout </ion-button>
+        <ion-button id="createNewButton" (click)="createNewSession()" routerLink="/log-workout" routerLinkActive="active" routerDirection="forward">Log A Workout </ion-button>
       </ion-col>
       <ion-col></ion-col>
     </ion-row>
