Chart data in progress

--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -3,7 +3,7 @@
       <ion-title>One Rep Max</ion-title>
     </ion-toolbar>
     <div class="chart-container">
-        <canvas  id="MyChart" >{{ chart }}</canvas>
+        <canvas  id="chart2" >{{ chart }}</canvas>
     </div>
 </ion-content>
 
