--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -1,10 +1,15 @@
 <ion-content>
-    <ion-toolbar>
-      <ion-title>One Rep Max</ion-title>
-    </ion-toolbar>
-    <div class="chart-container">
-        <canvas  id="chart2" >{{ chart }}</canvas>
-    </div>
-</ion-content>
+  <ion-toolbar>
+    <ion-title>One Rep Max</ion-title>
+    <ion-buttons slot="start" color="#fff" (click)="loadData()">
+      <ion-button expand="block">
+        <ion-icon name="person-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <div class="chart-container">
+      <canvas  id="OneRMChart" >{{ chart }}</canvas>
+  </div>
 
+</ion-content>
 
