removed reactive programming and went back to a responsive programming

--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -5,11 +5,11 @@
     </ion-button>
   </ion-buttons>
     <ion-title>Emoticoach</ion-title>
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-button expand="block">
         <ion-icon name="settings-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 
 <ion-content>
