--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -12,9 +12,9 @@
       <ion-label>Log</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="sync">
+    <!-- <ion-tab-button tab="sync">
       <ion-icon name="cloud-upload-sharp"></ion-icon>
       <ion-label>Sync</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
