--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -4,54 +4,41 @@
       <ion-back-button (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Workout</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="saveSession()">Save</ion-button>
-    </ion-buttons>
+
   </ion-toolbar>
-  
+
 </ion-header>
 <ion-content>
   <ion-list>
     <ion-item-divider sticky>
-      <ion-input 
-        [clearOnEdit]="true" 
-        [(ngModel)]="currentSession.name">
+      <ion-input [clearOnEdit]="true" [(ngModel)]="currentSession.name">
       </ion-input>
-      <ion-icon 
-        slot="end" 
-        id="open-modal" 
-        name="calendar-outline">
+      <ion-icon slot="end" id="open-modal" name="calendar-outline">
       </ion-icon>
       <ion-note slot="end">
         {{currentSession.datetime | date:'short' }}
       </ion-note>
     </ion-item-divider>
-    <ion-modal 
-      trigger="open-modal" 
-      [cssClass]="'center'">
-        <ng-template>
-          <ion-datetime [(ngModel)]="currentSession.datetime" size="cover"></ion-datetime>
-        </ng-template>
+    <ion-modal trigger="open-modal" [cssClass]="'center'">
+      <ng-template>
+        <ion-datetime [(ngModel)]="currentSession.datetime" size="cover"></ion-datetime>
+      </ng-template>
     </ion-modal>
- 
-  <app-exercise 
-    *ngFor="let activity of currentSession.activities; let i = index" 
-    [activity]="activity" 
-    [activityIndex]="i">
-  </app-exercise>
-  
-  <ng-container #container></ng-container>
 
-  <ion-row>
-    <ion-col>
-    </ion-col>
-      <ion-col size="auto">
-        <ion-button (click)="addNewComponent()">Add Excercise</ion-button>
-      </ion-col>
+    <app-exercise *ngFor="let activity of currentSession.activities; let i = index" [activity]="activity"
+      [activityIndex]="i">
+    </app-exercise>
+
+    <ion-button expand="block" class="redbutton" fill="clear" color="transparent" (click)="addNewComponent()">Add Excercise</ion-button>
+    <ion-grid>
+    <ion-row>
+      <ion-col></ion-col>
       <ion-col>
+        <ion-button expand="block" class="save" fill="clear" color="transparent" (click)="saveSession()">Save</ion-button>
       </ion-col>
-  </ion-row>
-  
+      <ion-col></ion-col>
+    </ion-row>
+  </ion-grid>
+
   </ion-list>
 </ion-content>
-
