--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -15,7 +15,7 @@
     >
       <ion-card-header>
         <ion-card-title>{{session.name}} </ion-card-title>
-        <ion-card-subtitle>{{session.datetime}}</ion-card-subtitle>
+        <ion-card-subtitle>{{session.datetime | date}}</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
