--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -4,13 +4,11 @@
       <ion-back-button (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Workout</ion-title>
-
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list lines="none">
     <ion-item-divider sticky>
       <ion-input [clearOnEdit]="true" [(ngModel)]="currentSession.name">
       </ion-input>
@@ -32,13 +30,17 @@
           <ion-row>
           <ion-col size="6">
             <ion-row class="cardHeader">
-              <div class="cardHeader" >Duration</div>
+              <div class="cardHeader">Duration</div>
             </ion-row>
            <ion-row>
             <ion-item>
               <ion-icon size="small" name="timer-outline"></ion-icon>
-              <ion-input [(ngModel)]="currentSession.duration" [clearOnEdit]="true" type="number" placeholder="Mins" ></ion-input>
+              <ion-input #duration [(ngModel)]="currentSession.duration" [clearOnEdit]="true" type="number" placeholder="Mins" ></ion-input>
+             
             </ion-item>
+            
+            
+            
            </ion-row>
           </ion-col>
           <ion-col size="6">
@@ -46,11 +48,12 @@
               <div class="cardHeader" >Muscle Groups</div>
             </ion-row>
             <ion-row>
-              <ion-select placeholder="Select all muscles that apply" [multiple]="true" [(ngModel)]="currentSession.muscleGroups">
+              <!-- <ion-select placeholder="Select all muscles that apply" [multiple]="true" [(ngModel)]="currentSession.muscleGroups">
                 <div *ngFor="let muscle of muscleList">
                   <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
                 </div>
-              </ion-select>
+              </ion-select> -->
+              <ion-text>{{currentSession.muscleGroups}}</ion-text>
             </ion-row>
             
           </ion-col>
