--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise.component.html
@@ -1,29 +1,38 @@
 <ion-card>
   <ion-card-header>
     <ion-card-title>
-      <ion-input 
-        [clearOnEdit]="true"  
-        placeholder="Excercise" 
-        [(ngModel)]="activity.name"
-        (ionChange)="updateName()">
-      </ion-input>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-input [clearOnEdit]="true" placeholder="Excercise" [(ngModel)]="activity.name"
+              (ionChange)="updateName()">
+            </ion-input>
+          </ion-col>
+          <ion-col>
+            <ion-select [multiple]="true" [(ngModel)]="activity.muscleGroups">
+              <div *ngFor="let muscle of muscleList">
+                <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
+              </div>
+            </ion-select>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-card-title>
   </ion-card-header>
-  
+
   <ion-card-content>
-    <app-exercise-set 
-      *ngFor="let set of activity.sets; index as i;"
-      [activityIndex] = "activityIndex"
-      [set] = "set"
-      [setCount]="i+1"
-      > 
+    <app-exercise-set *ngFor="let set of activity.sets; index as i;" 
+        [activityIndex]="activityIndex" [set]="set"
+        [setCount]="i+1">
     </app-exercise-set>
     <ion-row>
-      <ion-col></ion-col>
-      <ion-col size="auto">
-        <ion-button (click)="addSet()" fill="clear">Add Set</ion-button>
+      <ion-col>
+        <ion-button class="Delete" (click)="deleteSet()" fill="clear">Delete Set</ion-button>
       </ion-col>
       <ion-col></ion-col>
+      <ion-col>
+        <ion-button class="Add" (click)="addSet()" fill="clear">Add Set</ion-button>
+      </ion-col>
     </ion-row>
   </ion-card-content>
 </ion-card>
