--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -4,10 +4,9 @@
       <ion-back-button (click)="goBack()"></ion-back-button>
     </ion-buttons>
     <ion-title>Add Workout</ion-title>
-
   </ion-toolbar>
-
 </ion-header>
+
 <ion-content>
   <ion-list lines="none">
     <ion-item-divider sticky>
@@ -29,16 +28,38 @@
 
       <ion-card-content>
         <ion-grid>
-          <ion-row class="cardHeader">
-            <div class="cardHeader" >Duration</div>
-          </ion-row>
-         <ion-row>
-          <ion-item>
-            <ion-icon size="small" name="timer-outline"></ion-icon>
-            <ion-input [(ngModel)]="currentSession.duration" [clearOnEdit]="true" type="number" placeholder="Mins" ></ion-input>
-          </ion-item>
+          <ion-row>
+          <ion-col size="6">
+            <ion-row class="cardHeader">
+              <div class="cardHeader">Duration</div>
+            </ion-row>
+           <ion-row>
+            <ion-item>
+              <ion-icon size="small" name="timer-outline"></ion-icon>
+              <ion-input #duration [(ngModel)]="currentSession.duration" [clearOnEdit]="true" type="number" placeholder="Mins" ></ion-input>
+             
+            </ion-item>
             
-         </ion-row>
+            
+            
+           </ion-row>
+          </ion-col>
+          <ion-col size="6">
+            <ion-row class="cardHeader">
+              <div class="cardHeader" >Muscle Groups</div>
+            </ion-row>
+            <ion-row>
+              <!-- <ion-select placeholder="Select all muscles that apply" [multiple]="true" [(ngModel)]="currentSession.muscleGroups">
+                <div *ngFor="let muscle of muscleList">
+                  <ion-select-option [value]="muscle">{{muscle}}</ion-select-option>
+                </div>
+              </ion-select> -->
+              <ion-text>{{currentSession.muscleGroups}}</ion-text>
+            </ion-row>
+            
+          </ion-col>
+          </ion-row>
+
  
         </ion-grid>
           
