--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-toolbar>
-  <ion-buttons slot="start" color="#fff" routerLink="/login">
+  <ion-buttons slot="start" color="#fff" routerLink="/account">
     <ion-button expand="block">
       <ion-icon name="person-circle-outline"></ion-icon>
     </ion-button>
