--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -33,3 +33,10 @@
 ion-toolbar {
     --background: #833535;
   }
+
+ion-content {
+  // overwrite inline styles
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
