--- a/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-livedata/graph-livedata.page.html
@@ -8,14 +8,23 @@
   </div>
   <ion-grid>
     <ion-row>
-      <ion-col size="auto">
+      <ion-col>
         <ion-button (click)="openConnection()">Start</ion-button>
       </ion-col>
 
-      <ion-col size="auto">
+      <ion-col>
         <ion-button (click)="closeConnection()">Stop</ion-button>
       </ion-col>
-
+      
+    </ion-row>
+    <ion-row>
+      <ion-col size="auto">
+        <ion-select interface="action-sheet" placeholder="Select Stream" [(ngModel)]="currentConnection">
+          <div *ngFor="let connection of connections;">
+            <ion-select-option  [value]="connection"> {{connection}}</ion-select-option>
+          </div>
+        </ion-select>
+      </ion-col>
     </ion-row>
   </ion-grid>
   
