Dropdown added, still need to connect to backend

--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-toolbar>
-    <ion-title>Muslce Group Graph</ion-title>
+    <ion-title>Muscle Group Graph</ion-title>
  
   </ion-toolbar>
   <div class="chart-container">
