removed badge from icon

--- a/Frontend/Emoticoach/src/app/tabs/tabs.page.html
+++ b/Frontend/Emoticoach/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
     <ion-tab-button tab="home">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Today</ion-label>
-      <ion-badge>6</ion-badge>
+      <!-- <ion-badge>6</ion-badge> -->
     </ion-tab-button>
 
     <ion-tab-button tab="log">
